# LFA_DFA-NFA

./: CMakeLists.txt  DFA.h  LFA-Assignment2_Regex_DFA.json  NFA.cpp  NFA.h  NFA_LAMBDA.cpp  main.cpp  readme.md
Source/: CFG.cpp  CFG.hpp  DFA.cpp  NFA.cpp  NFA_LAMBDA.hpp  RandomNumberGenerator.cpp  RandomNumberGenerator.hpp  main.cpp
